# crucible-tem-upload-ui

./: .gitignore  README.md  backend.py  instrument_conf.py  instrument_plugins.py  main.py  prefect_backend.py  pyproject.toml  serve_flows.py  start.bat  start.sh
instruments/: registry.py
instruments/insitu_pl/: __init__.py
instruments/nirvana/: __init__.py
instruments/spectre/: __init__.py
instruments/spinbot/: __init__.py
instruments/team05/: __init__.py
instruments/team1/: __init__.py
instruments/themis/: __init__.py
instruments/titanx/: __init__.py
templates/: index.html
templates/instruments/nirvana/: panel.html
